# arbiter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
benchmark/gups/: Makefile  gups-hotset-move.c  gups-sparse.c  gups-store.c  gups.c  hotsets.txt  run_gups.sh  timer.c  timer.h
benchmark/xindex/: run_xindex.sh
benchmark/xindex/XIndex-H/: CMakeLists.txt  Makefile  helper.h  intel-mkl-install.txt  xindex_model.h  xindex_util.h  ycsb_bench.cpp  ycsb_bench_large.cpp  ycsb_bench_tiny.cpp
benchmark/xindex/YCSB/: generate_dat.sh
benchmark/xindex/YCSB/xindex_dat/github-parts/: MANIFEST.sha256  xindex_load_ycsb_a.dat.zst.part-0000  xindex_transaction_ycsb_a.dat.zst.part-0000  xindex_transaction_ycsb_a.dat.zst.part-0001  xindex_transaction_ycsb_a.dat.zst.part-0002  xindex_transaction_ycsb_b.dat.zst.part-0000  xindex_transaction_ycsb_b.dat.zst.part-0001
benchmarks/: CMakeLists.txt
benchmarks/gups/: gups.cpp
compiler/: CMakeLists.txt
compiler/include/: CMakeLists.txt
compiler/include/arbiter/Dialect/Arbiter/IR/: ArbiterOps.h  ArbiterOps.td
compiler/include/arbiter/LLVM/: AllocationSite.h
compiler/include/arbiter/Transforms/: Passes.h
compiler/lib/: CMakeLists.txt
compiler/lib/Dialect/Arbiter/: ArbiterDialect.cpp  CMakeLists.txt
compiler/lib/LLVM/: AllocationSite.cpp
compiler/lib/Transforms/: CMakeLists.txt  LowerToRuntime.cpp  MarkCandidates.cpp  Passes.cpp  RewriteAllocations.cpp  RewriteDeallocations.cpp  SelectAllocations.cpp  SelectObjects.cpp
compiler/llvm/include/arbiter/LLVM/: Passes.h  RewritePlan.h
compiler/llvm/lib/: CMakeLists.txt  LockTouchInstrumentation.cpp  Passes.cpp  PatternPlacement.cpp  ReportAllocationSites.cpp  RewriteHeapAllocations.cpp  RewriteMMapAllocations.cpp  RewritePlan.cpp  SharedMutablePlacement.cpp
compiler/llvm/plugins/: CMakeLists.txt
compiler/llvm/plugins/arbiter-llvm/: ArbiterLLVMPlugin.cpp  CMakeLists.txt
compiler/mlir-legacy/include/: CMakeLists.txt
compiler/mlir-legacy/include/arbiter/Dialect/Arbiter/: ArbiterDialect.h
compiler/mlir-legacy/include/arbiter/Dialect/Arbiter/IR/: ArbiterBase.td  ArbiterDialect.h  ArbiterOps.td  CMakeLists.txt
compiler/mlir-legacy/include/arbiter/Transforms/: Passes.h
compiler/mlir-legacy/lib/Dialect/: CMakeLists.txt
compiler/mlir-legacy/lib/Transforms/: CMakeLists.txt  Passes.cpp  RewriteAllocations.cpp
compiler/mlir-legacy/tools/arbiter-opt/: CMakeLists.txt  arbiter-opt.cpp
compiler/tools/: CMakeLists.txt
compiler/tools/arbiter-opt/: CMakeLists.txt  arbiter-opt.cpp
docs/: benchmark-data.md  benchmark-plan.md  benchmarks.md  generic-placement-experiment.md  generic-placement-results.md  llvm-only-design.md  lock-touch-experiment-results.md  lock-touch-page-migration.md  mlir-legacy.md  mlir-memref-path.md  overview.md  shared-mutable-pattern-placement.md  xindex-ycsb-pattern-placement.md
docs/experiments/: README.md  scf-parallel-store-heuristic.md
runtime/: CMakeLists.txt
runtime/include/: arbiter_lock_touch_runtime.h  arbiter_runtime.h  arbiter_runtime_site.h
runtime/mlir-legacy/: CMakeLists.txt
runtime/mlir-legacy/include/: arbiter_runtime.h
runtime/src/: arbiter_lock_page_table.cpp  arbiter_lock_page_table.h  arbiter_lock_touch.cpp  arbiter_runtime.cpp  arbiter_runtime_site.cpp  arbiter_side_table.cpp  arbiter_side_table.h
scripts/: build-gups-llvm.sh  build-xindex-llvm.sh  build-xindex-lock-touch-llvm.sh  build_gups_pipeline.sh  collect-allocation-sites.sh  import-niagara-workloads.sh  package-xindex-ycsb-data.sh  prepare-xindex-ycsb-scale-data.sh  prepare-xindex-ycsb-smoke-data.sh  restore-xindex-ycsb-data.sh  run-generic-placement-experiment.sh  run-gups-arbiter.sh  run-protected-scaled-xindex-experiment.sh  run-xindex-arbiter.sh  run_gups_bench.sh  setup-benchmarks.sh  setup.sh  smoke-mlir-legacy.sh  smoke.sh  summarize-generic-placement-experiment.sh
scripts/xindex-experiments/: all.sh  lock-touch.sh  shared-mutable.sh
tests/Runtime/: arbiter-numa-placement.cpp  arbiter-runtime-smoke.cpp
tests/Transforms/: lower-to-runtime.mlir  mark-candidates.mlir  rewrite-allocations.mlir  select-allocations.mlir  select-objects.mlir
tests/llvm/: arbiter-lock-touch-migration.cpp  arbiter-numa-placement.cpp  arbiter-runtime-smoke.cpp  lock-touch-instrument.ll  lock-touch-report.ll  pattern-report-sites.ll  pattern-rewrite.ll  report-sites.ll  rewrite-calloc.ll  rewrite-cxx-new-delete.ll  rewrite-malloc-free.ll  rewrite-mmap-munmap.ll  shared-mutable-report.ll  shared-mutable-rewrite.ll
tests/mlir-legacy/: lower-to-runtime-invalid.mlir
